<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:id="@+id/registerView">

    <ImageView
        android:id="@+id/image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/ic_worldwide"
        android:contentDescription="@string/app_name"/>

    <ProgressBar
        android:visibility="invisible"
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/textPwrd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textEmail"
        android:layout_marginTop="23dp"
        android:gravity="start"
        android:hint="Password..."
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/textConfirmPwrd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textPwrd"
        android:layout_marginTop="23dp"
        android:gravity="start"
        android:hint="Confirm Password..."
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/textEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/progress_circular"
        android:layout_marginTop="23dp"
        android:gravity="start"
        android:hint="Email..."
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textConfirmPwrd"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="26dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/round_bg"
        android:text="@string/register"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textGoBackToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerBtn"
        android:gravity="center"
        android:text="@string/have_an_account_text"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

</RelativeLayout>